Fix z-index issues

--- a/src/Calendar.scss
+++ b/src/Calendar.scss
@@ -17,6 +17,7 @@
     font-weight: 600;
     position: sticky;
     top: 0;
+    z-index: 1;
     background: white;
     margin-top: -$spacer * 4;
     padding-top: $spacer * 4;
