--- a/src/index.scss
+++ b/src/index.scss
@@ -24,7 +24,7 @@ nav.navbar {
   background: $light;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 100;
   left: 0;
   right: 0;
 
